--- a/StartupCarvaan/app/src/main/res/layout/z_single_biding.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_biding.xml
@@ -6,11 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="20dp"
-    android:layout_marginTop="12dp"
+    android:layout_marginTop="15dp"
     android:layout_marginRight="30dp"
     android:layout_marginLeft="30dp"
 
-
+android:layout_marginBottom="4dp"
 
 
     app:cardElevation="15dp"
