--- a/StartupCarvaan/app/src/main/res/layout/activity_helppage.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_helppage.xml
@@ -44,13 +44,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-
+android:id="@+id/linear1"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
+                    android:id="@+id/linear11"
                     android:layout_marginTop="8dp"
                     android:layout_marginRight="20dp"
                     android:orientation="horizontal">
@@ -71,7 +72,8 @@
                         <ImageView
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:src="@drawable/ic_baseline_arrow_drop_down_24" />
+                            android:src="@drawable/ic_baseline_arrow_drop_down_24"
+                            android:id="@+id/im1"/>
 
                     </LinearLayout>
 
@@ -101,7 +103,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-
+                android:id="@+id/linear2"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -109,6 +111,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="8dp"
+                    android:id="@+id/linear12"
                     android:layout_marginRight="20dp"
                     android:orientation="horizontal">
 
@@ -128,6 +131,7 @@
                         <ImageView
                             android:layout_width="30dp"
                             android:layout_height="30dp"
+                            android:id="@+id/im2"
                             android:src="@drawable/ic_baseline_arrow_drop_down_24" />
 
                     </LinearLayout>
@@ -158,7 +162,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-
+                android:id="@+id/linear3"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -167,6 +171,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginRight="20dp"
+                    android:id="@+id/linear13"
                     android:orientation="horizontal">
 
                     <TextView
@@ -175,6 +180,7 @@
                         android:text="why should you do this?"
                         android:textColor="#2C9FD3"
                         android:textSize="18sp"
+
                         android:textStyle="bold" />
 
                     <LinearLayout
@@ -185,6 +191,7 @@
                         <ImageView
                             android:layout_width="30dp"
                             android:layout_height="30dp"
+                            android:id="@+id/im3"
                             android:src="@drawable/ic_baseline_arrow_drop_down_24" />
 
                     </LinearLayout>
@@ -215,7 +222,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-
+                android:id="@+id/linear4"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -224,6 +231,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginRight="20dp"
+                    android:id="@+id/linear14"
                     android:orientation="horizontal">
 
                     <TextView
@@ -242,6 +250,7 @@
                         <ImageView
                             android:layout_width="30dp"
                             android:layout_height="30dp"
+                            android:id="@+id/im4"
                             android:src="@drawable/ic_baseline_arrow_drop_down_24" />
 
                     </LinearLayout>
@@ -272,13 +281,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-
+                android:id="@+id/linear5"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
+                    android:id="@+id/linear15"
                     android:layout_marginTop="8dp"
                     android:layout_marginRight="20dp"
                     android:orientation="horizontal">
@@ -299,6 +309,7 @@
                         <ImageView
                             android:layout_width="30dp"
                             android:layout_height="30dp"
+                            android:id="@+id/im5"
                             android:src="@drawable/ic_baseline_arrow_drop_down_24" />
 
                     </LinearLayout>
