--- a/StartupCarvaan/app/src/main/res/layout/header.xml
+++ b/StartupCarvaan/app/src/main/res/layout/header.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:padding="10dp"
     android:elevation="0dp"
-    android:background="#FF533D78">
+    android:background="@color/blue">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
