--- a/StartupCarvaan/app/src/main/res/layout/dailogsell.xml
+++ b/StartupCarvaan/app/src/main/res/layout/dailogsell.xml
@@ -82,7 +82,7 @@
         android:layout_marginRight="20dp"
 android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
-        android:layout_gravity="bottom"
+        android:popupBackground="@drawable/spinwhite"
         android:fontFamily="sans-serif-medium"
         android:spinnerMode="dialog"
         android:textSize="14sp"
@@ -138,6 +138,7 @@ android:layout_marginTop="10dp"
         android:id="@+id/btn_sell"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="18dp"
         android:backgroundTint="@color/teal_200"
