--- a/StartupCarvaan/app/src/main/res/layout/z_single_myshare.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_myshare.xml
@@ -115,17 +115,18 @@
                         android:textColor="#000000"
                         />
                     <Spinner
-                        android:id="@+id/spinner3"
+                        android:id="@+id/spinner4"
                         android:layout_width="match_parent"
-                        android:layout_height="20dp"
-                        android:layout_marginLeft="15dp"
+                        android:layout_height="25dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="10dp"
                         android:layout_gravity="bottom"
                         android:fontFamily="sans-serif-medium"
                         android:spinnerMode="dialog"
-                        android:textSize="20sp"
+                        android:textSize="12sp"
                         android:background="@drawable/spinnerbord"
                         android:splitMotionEvents="true"
-                        android:textColor="#ffffff"/>
+                        android:textColor="@color/black"/>
 
                 </LinearLayout>
 
