--- a/StartupCarvaan/app/src/main/res/layout/dailogsell.xml
+++ b/StartupCarvaan/app/src/main/res/layout/dailogsell.xml
@@ -82,9 +82,10 @@
         android:layout_marginRight="20dp"
 android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
-        android:popupBackground="@drawable/spinwhite"
+        android:popupBackground="@color/yellow"
+
         android:fontFamily="sans-serif-medium"
-        android:spinnerMode="dialog"
+
         android:textSize="14sp"
 
 
@@ -94,7 +95,7 @@ android:layout_marginTop="10dp"
 
     <LinearLayout
         android:layout_marginTop="20dp"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -102,29 +103,28 @@ android:layout_marginTop="10dp"
             android:id="@+id/price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="40dp"
+
+         android:layout_marginLeft="30dp"
             android:text="Price:"
             android:textColor="#FFFFFF"
-            android:textSize="20sp" />
+            android:textSize="17sp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
 
+
+android:layout_marginLeft="20dp"
             android:text="quantity:"
             android:textColor="#FFFFFF"
-            android:textSize="20sp" />
+            android:textSize="17sp" />
 
         <EditText
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="15dp"
             android:id="@+id/shares"
             android:layout_width="120dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="20dp"
+            android:layout_height="32dp"
+
+
             android:background="@drawable/sellinput"
             android:gravity="center"
             android:textColorHint="#ffffff"
@@ -138,15 +138,15 @@ android:layout_marginTop="10dp"
         android:id="@+id/btn_sell"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        
+        android:layout_marginTop="20dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="18dp"
-        android:backgroundTint="@color/teal_200"
+        android:backgroundTint="@color/yellow"
 
         android:text="Sell"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp" />
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
 
 </LinearLayout>
