--- a/StartupCarvaan/app/src/main/res/layout/activity_recycler.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_recycler.xml
@@ -84,7 +84,7 @@
         android:layout_below="@+id/cv1"
 
         android:padding="16dp"
-        android:layout_height="200dp"
+        android:layout_height="600dp"
         android:layout_marginTop="32dp"
         android:layout_marginHorizontal="16dp"
         app:cardCornerRadius="30dp"
@@ -93,7 +93,31 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:weightSum="2">
+            android:weightSum="9">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="6">
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:id="@+id/rateText"
+                    android:text="garfgdsfgsdfgsergsregwsefdg"
+                    android:textSize="20sp">
+
+                </TextView>
+
+            </LinearLayout>
 
             <Button
                 android:layout_width="match_parent"
