--- a/StartupCarvaan/app/src/main/res/layout/header.xml
+++ b/StartupCarvaan/app/src/main/res/layout/header.xml
@@ -11,7 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
+        android:orientation="horizontal"
         android:gravity="center_vertical">
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_baseline_account_circle_24"
+            android:layout_marginRight="10dp"/>
 
         <TextView
             android:id="@+id/namein"
