--- a/StartupCarvaan/app/src/main/res/layout/z_single_biding.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_biding.xml
@@ -64,6 +64,7 @@ android:layout_marginBottom="4dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="18dp"
                 android:layout_marginRight="15dp"
+                android:fontFamily="@font/proximanovaregular"
                 android:layout_marginTop="3.5dp"
                 android:text="this is a very good item with super base and good qwality music it is worth the amount and it is absolutely free just use your bonus coin as much as possible"
                 android:textSize="12.5sp"
@@ -153,6 +154,7 @@ android:layout_marginLeft="10dp"
                         android:background="@drawable/timer"
                         android:gravity="center"
                         android:text="Join"
+                        android:fontFamily="@font/proximanovaregular"
                         android:layout_marginRight="15dp"
                         android:textColor="@color/white"
                         android:textSize="15sp"
