--- a/StartupCarvaan/app/src/main/res/layout/z_single_blogfile.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_blogfile.xml
@@ -102,6 +102,7 @@
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="14dp"
                     android:gravity="center"
+                    android:fontFamily="@font/proximanovaregular"
                     android:textColor="#000000"
                     android:text="Lorem Ipsum is simply Lorem Ipsum has been the industry's standard"
                     app:layout_constraintEnd_toEndOf="parent"
