--- a/StartupCarvaan/app/src/main/res/layout/z_single_myshare.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_myshare.xml
@@ -45,7 +45,7 @@
                 android:layout_marginLeft="8dp"
 
 
-
+                android:fontFamily="@font/proximanovaregular"
                 android:text="ShareyfName7"
                 android:textColor="#000000"
                 android:textStyle="bold"
@@ -118,13 +118,14 @@
                         android:id="@+id/spinner4"
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
+
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="10dp"
                         android:layout_gravity="bottom"
                         android:fontFamily="sans-serif-medium"
                         android:spinnerMode="dialog"
                         android:textSize="12sp"
-                        android:background="@drawable/spinnerbord"
+                        android:background="@drawable/mysharespin"
                         android:splitMotionEvents="true"
                         android:textColor="@color/black"/>
 
@@ -140,7 +141,7 @@
             android:layout_width="match_parent"
 
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
             >
 
@@ -151,7 +152,7 @@
                 android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
-
+                android:fontFamily="@font/proximanovaregular"
 
                 android:text="trade"
                 android:backgroundTint="#FF59B563"
