--- a/StartupCarvaan/app/src/main/res/values/colors.xml
+++ b/StartupCarvaan/app/src/main/res/values/colors.xml
@@ -18,6 +18,8 @@
     <color name="lightgrey">#EEEEEE</color>
     <color name="goodgrey">#535353</color>
     <color name="yellow">#F8BA0F</color>
+    <color name="green">#FF59B563</color>
+
 
     <color name="purple">#693B71</color>
     <color name="orange">#F48E6E</color>
