--- a/StartupCarvaan/app/src/main/res/layout/activity_card_view.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_card_view.xml
@@ -179,11 +179,10 @@
                 android:layout_height="wrap_content"
 
 
-                android:padding="16dp"
-                app:cardCornerRadius="50dp"
                 android:layout_marginBottom="16dp"
-                app:cardBackgroundColor="@color/orange"
-                >
+                android:padding="16dp"
+                app:cardBackgroundColor="@color/green"
+                app:cardCornerRadius="50dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -213,20 +212,23 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:layout_marginLeft="35dp"
+
                                 android:text="My Portfolio"
                                 android:textColor="@color/white"
                                 android:textSize="26sp">
 
                             </TextView>
+
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="right">
+
                                 <ImageView
                                     android:layout_width="32dp"
                                     android:layout_height="32dp"
                                     android:layout_marginRight="50dp"
-                                    android:src="@drawable/orangedot"/>
+                                    android:src="@drawable/orangedot" />
                             </LinearLayout>
 
 
