--- a/StartupCarvaan/app/src/main/res/layout/z_single_biding.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_biding.xml
@@ -34,6 +34,8 @@ android:layout_marginBottom="4dp"
                 android:layout_width="100dp"
                 android:layout_height="27dp"
                 android:text="ugdie"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="2dp"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:background="@drawable/joinbu"
@@ -74,13 +76,15 @@ android:layout_marginBottom="4dp"
 android:layout_marginLeft="10dp"
                 android:layout_marginBottom="12dp"
                 android:gravity="center"
+
                 android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <LinearLayout
-                    android:layout_marginLeft="10dp"
+                  android:gravity="center_horizontal"
                     android:orientation="vertical"
+                  android:layout_marginLeft="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <LinearLayout
@@ -108,7 +112,7 @@ android:layout_marginLeft="10dp"
                     <EditText
                         android:id="@+id/bidprice"
                         android:layout_width="120dp"
-                        android:layout_height="28dp"
+                        android:layout_height="25dp"
                         android:textSize="12.5sp"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/bidprice"
@@ -120,14 +124,16 @@ android:layout_marginLeft="10dp"
                 <LinearLayout
 
                     android:orientation="vertical"
-                    android:layout_marginTop="5dp"
-                   android:layout_marginRight="25dp"
-                    android:gravity="right"
-                    android:paddingLeft="15dp"
+
+                  android:gravity="center_horizontal"
+
+
                     android:layout_width="match_parent"
+
                     android:layout_height="wrap_content">
                     <LinearLayout
                         android:orientation="horizontal"
+                        android:padding="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
                         <TextView
@@ -150,12 +156,12 @@ android:layout_marginLeft="10dp"
                         android:id="@+id/join"
                         android:layout_marginTop="10dp"
                         android:layout_width="120dp"
-                        android:layout_height="26dp"
+                        android:layout_height="24dp"
                         android:background="@drawable/timer"
                         android:gravity="center"
                         android:text="Join"
                         android:fontFamily="@font/proximanovaregular"
-                        android:layout_marginRight="15dp"
+
                         android:textColor="@color/white"
                         android:textSize="15sp"
                         android:textStyle="bold" />
