--- a/StartupCarvaan/app/src/main/res/drawable/circle.xml
+++ b/StartupCarvaan/app/src/main/res/drawable/circle.xml
@@ -4,5 +4,5 @@
     android:innerRadiusRatio="2.5"
     android:thickness="4dp"
     android:useLevel="true">
-    <solid android:color="@color/teal_200" />
+    <solid android:color="@color/blue" />
 </shape>
