--- a/StartupCarvaan/app/src/main/res/layout/fragment_mycoins.xml
+++ b/StartupCarvaan/app/src/main/res/layout/fragment_mycoins.xml
@@ -1,31 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+android:orientation="vertical"
     tools:context=".fragments.mycoins.mycoins">
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
         android:text="Coin status"
         android:textColor="@color/purple_500"
-        android:textSize="24sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/proximanovaregular"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RelativeLayout
-        android:layout_width="413dp"
-        android:layout_height="539dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -37,10 +31,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-                android:padding="16dp"
+                android:padding="10dp"
                 app:cardCornerRadius="50dp"
                 android:layout_marginBottom="16dp"
-                app:cardBackgroundColor="@color/purple"
+                app:cardBackgroundColor="@color/bluetr"
                 >
 
                 <LinearLayout
@@ -48,7 +42,8 @@
                     android:layout_height="match_parent"
                     android:layout_marginHorizontal="16dp"
 
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginBottom="10dp"
+
 
                     android:orientation="horizontal">
 
@@ -65,132 +60,101 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:gravity="center_vertical"
-                            >
+                            android:layout_marginTop="2dp"
+                            android:gravity="center_vertical">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_marginLeft="35dp"
+                                android:layout_marginLeft="100dp"
                                 android:text="Your Rci"
                                 android:textColor="@color/white"
                                 android:textSize="26sp">
 
                             </TextView>
+
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="right">
+
                                 <ImageView
                                     android:layout_width="32dp"
                                     android:layout_height="32dp"
                                     android:layout_marginRight="50dp"
-                                    android:src="@drawable/purpledot"/>
+                                    android:src="@drawable/purpledot" />
                             </LinearLayout>
 
                         </LinearLayout>
 
+
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="15dp"
+                            android:orientation="horizontal">
 
-                            android:weightSum="2">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="32dp"
 
-                            <LinearLayout
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginLeft="32dp"
-                                    android:layout_marginTop="32dp"
-                                    android:text="Current Rci"
-                                    android:textColor="@color/white"
-                                    android:textSize="22sp">
+                                android:text="Current Rci"
+                                android:textColor="@color/white"
+                                android:textSize="22sp">
 
 
-                                </TextView>
+                            </TextView>
 
-                                <TextView
-                                    android:id="@+id/rci"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginLeft="50dp"
-                                    android:text="32$"
-                                    android:textColor="@color/white"
-                                    android:textSize="20sp">
+                            <TextView
+                                android:id="@+id/rci"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="17dp"
+                                android:text="32$"
+                                android:textColor="@color/white"
 
-
-                                </TextView>
-
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:orientation="vertical">
+                                android:textSize="20sp"
+                                android:textStyle="bold">
 
 
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginLeft="32dp"
-                                    android:layout_marginTop="32dp"
-                                    android:text="Your winnings"
-                                    android:textColor="@color/white"
-                                    android:textSize="22sp">
+                            </TextView>
 
-
-                                </TextView>
-
-                                <TextView
-                                    android:id="@+id/winnings"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginLeft="50dp"
-                                    android:text="32$"
-                                    android:textColor="@color/white"
-                                    android:textSize="20sp">
-
-
-                                </TextView>
-
-
-                            </LinearLayout>
 
                         </LinearLayout>
+
+
                         <LinearLayout
-                            android:layout_marginTop="10dp"
-                            android:layout_gravity="center"
-                            android:gravity="center"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="10dp"
+                            android:gravity="center"
                             android:orientation="horizontal">
+
                             <Button
                                 android:id="@+id/sell"
-                                android:layout_marginRight="100dp"
-                                android:layout_gravity="start"
-                                android:gravity="start"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:text="sell rci">
-                            </Button>
+                                android:layout_marginRight="100dp"
+                                android:backgroundTint="@color/teal_700"
+
+
+                                android:gravity="center"
+
+                                android:text="sell rci"></Button>
+
                             <Button
 
                                 android:id="@+id/buy"
-                                android:layout_marginLeft="10dp"
-                                android:layout_gravity="end"
-                                android:gravity="end"
-                                android:text="buy rci"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content">
-                            </Button>
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+
+                                android:layout_marginLeft="10dp"
+                                android:backgroundTint="@color/teal_700"
+                                android:gravity="center"
+                                android:text="buy rci"></Button>
                         </LinearLayout>
 
 
@@ -207,11 +171,11 @@
                 android:layout_height="wrap_content"
 
 
-                android:padding="16dp"
-                app:cardCornerRadius="50dp"
                 android:layout_marginBottom="16dp"
-                app:cardBackgroundColor="@color/orange"
-                >
+                app:cardBackgroundColor="@color/teal_700"
+                android:padding="16dp"
+
+                app:cardCornerRadius="50dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -219,23 +183,12 @@
                     android:layout_marginHorizontal="16dp"
                     android:layout_marginBottom="15dp"
 
-                    android:orientation="horizontal">
-
+                    android:orientation="vertical">
 
                     <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginVertical="16dp"
-
-                        android:layout_weight="2"
-
-                        android:orientation="vertical">
-
-
-                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp">
+                            android:layout_marginTop="20dp">
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -246,37 +199,35 @@
                                 android:textSize="26sp">
 
                             </TextView>
+
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="right">
+
                                 <ImageView
                                     android:layout_width="32dp"
                                     android:layout_height="32dp"
                                     android:layout_marginRight="50dp"
-                                    android:src="@drawable/orangedot"/>
+                                    android:src="@drawable/orangedot" />
                             </LinearLayout>
 
 
                         </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
 
-                            android:weightSum="2">
 
                             <LinearLayout
-                                android:layout_width="0dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:orientation="vertical">
+                           android:layout_marginTop="15dp"
+                                android:orientation="horizontal">
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginLeft="32dp"
-                                    android:layout_marginTop="32dp"
+
                                     android:text="Current bonus"
                                     android:textColor="@color/white"
                                     android:textSize="22sp">
@@ -289,8 +240,9 @@
                                     android:id="@+id/bonus"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="32dp"
+                                    android:layout_marginLeft="15dp"
                                     android:text="32$"
+                                    android:textStyle="bold"
                                     android:textColor="@color/white"
                                     android:textSize="20sp">
 
@@ -300,13 +252,21 @@
 
                             </LinearLayout>
 
-                        </LinearLayout>
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginTop="10dp"
+                        android:text="Earn Bonus"
+
+                        />
 
 
                     </LinearLayout>
 
 
-                </LinearLayout>
+
 
 
             </androidx.cardview.widget.CardView>
@@ -314,5 +274,5 @@
 
         </LinearLayout>
 
-    </RelativeLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</>
