--- a/StartupCarvaan/app/src/main/res/layout/fragment_mycoins.xml
+++ b/StartupCarvaan/app/src/main/res/layout/fragment_mycoins.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".fragments.mycoins.mycoins">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView3"
@@ -272,5 +276,6 @@
 
     </LinearLayout>
 
+    </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
