--- a/StartupCarvaan/app/src/main/res/values-night/themes.xml
+++ b/StartupCarvaan/app/src/main/res/values-night/themes.xml
@@ -5,6 +5,9 @@
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/black</item>
+        <item name="maintextcolour">@color/green</item>
+        <item name="backgroundcolourmain">@color/blue</item>
+
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
