--- a/StartupCarvaan/app/src/main/res/values/attrs.xml
+++ b/StartupCarvaan/app/src/main/res/values/attrs.xml
@@ -2,5 +2,7 @@
     <declare-styleable name="FullscreenAttrs">
         <attr name="fullscreenBackgroundColor" format="color" />
         <attr name="fullscreenTextColor" format="color" />
+        <attr name="backgroundcolourmain" format="color" />
+        <attr name="maintextcolour" format="color" />
     </declare-styleable>
 </resources>
