--- a/StartupCarvaan/app/src/main/res/values/themes.xml
+++ b/StartupCarvaan/app/src/main/res/values/themes.xml
@@ -5,6 +5,8 @@
         <item name="colorPrimary">@color/blue</item>
         <item name="colorPrimaryVariant">@color/blue</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="maintextcolour">@color/teal_200</item>
+        <item name="backgroundcolourmain">@color/purp20</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
