--- a/StartupCarvaan/app/src/main/res/drawable/input.xml
+++ b/StartupCarvaan/app/src/main/res/drawable/input.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:color="@color/greyish"
-        android:width="1.6dp"/>
+        android:color="@color/green"
+        android:width="2dp"/>
     <corners
         android:radius="10dp"/>
 
