--- a/StartupCarvaan/app/src/main/res/layout/activity_intro_slider.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_intro_slider.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 android:paddingBottom="12dp"
+    android:background="?attr/backgroundlogin_suggest"
    >
 
     <androidx.viewpager.widget.ViewPager
