--- a/StartupCarvaan/app/src/main/res/layout/fragment_biding.xml
+++ b/StartupCarvaan/app/src/main/res/layout/fragment_biding.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".fragments.biding.biding"
-    android:background="@color/grey">
+    android:background="?attr/bidbackground">
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginBottom="70dp"
         android:id="@+id/bidingrecyclerview"
