--- a/StartupCarvaan/app/src/main/res/layout/fragment_mycoins.xml
+++ b/StartupCarvaan/app/src/main/res/layout/fragment_mycoins.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="?attr/backgroundcolourmain"
     tools:context=".fragments.mycoins.mycoins">
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +20,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/proximanovaregular"
         android:text="Coin status"
-        android:textColor="@color/purple_500"
+        android:textColor="?attr/cointextcolour"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
