--- a/StartupCarvaan/app/src/main/res/layout/slide_layout.xml
+++ b/StartupCarvaan/app/src/main/res/layout/slide_layout.xml
@@ -42,7 +42,7 @@
 
             android:layout_marginRight="30dp"
             android:textStyle="bold"
-            android:textColor="#000000"
+            android:textColor="?attr/txtsugestion"
             />
 
         <TextView
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="32dp"
-
+            android:textColor="?attr/txtsugestion"
             android:textSize="16sp"
             android:gravity="center"
             android:layout_marginTop="15dp"
