--- a/StartupCarvaan/app/src/main/res/layout/z_single_allshare.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_allshare.xml
@@ -98,7 +98,7 @@ android:background="@color/grey"
                         android:layout_marginBottom="10dp"
                         android:fontFamily="@font/proximanovaregular"
                         android:text="Company Name"
-                        android:textColor="?attr/maintextcolour"
+                        android:textColor="@color/white"
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
