--- a/StartupCarvaan/app/src/main/res/layout/z_single_biding.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_biding.xml
@@ -11,7 +11,7 @@
     android:layout_marginTop="15dp"
     android:layout_marginRight="20dp"
     android:layout_marginLeft="20dp"
-
+app:cardBackgroundColor="@color/white"
 android:layout_marginBottom="4dp"
 
 
