--- a/StartupCarvaan/app/src/main/res/values/themes.xml
+++ b/StartupCarvaan/app/src/main/res/values/themes.xml
@@ -6,7 +6,11 @@
         <item name="colorPrimaryVariant">@color/blue</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="maintextcolour">@color/teal_200</item>
-        <item name="backgroundcolourmain">@color/purp20</item>
+        <item name="backgroundcolourmain">@color/white</item>
+        <item name="txtsugestion">@color/black</item>
+        <item name="backgroundlogin_suggest">@color/white</item>
+        <item name="cointextcolour">@color/purple</item>
+        <item name="bidbackground">@color/grey</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
