--- a/StartupCarvaan/app/src/main/res/layout/activity_login.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5.8"
+        android:layout_weight="5.2"
 android:orientation="vertical"
 android:gravity="bottom|center_horizontal"
 
@@ -22,7 +22,7 @@ android:gravity="bottom|center_horizontal"
         >
         <ImageView
             android:layout_width="match_parent"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="30dp"
 
             android:layout_height="match_parent"
             android:src="@drawable/imrtnew"/>
@@ -179,10 +179,9 @@ android:gravity="bottom|center_horizontal"
 <!--            android:layout_height="150dp"-->
 <!--            android:src="@drawable/logo"/>-->
     <LinearLayout
-        android:layout_marginBottom="50dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4.2"
+        android:layout_weight="4.8"
         android:gravity="center_horizontal"
         android:orientation="vertical">
         <LinearLayout
@@ -192,6 +191,13 @@ android:gravity="bottom|center_horizontal"
             android:layout_marginRight="35dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/checkprivacy"
+                android:text="Privacy policy ,Terms and Conditions,Rules and Regulations"
+                android:textSize="16sp"
+                android:layout_marginBottom="20dp"/>
             <TextView
                 android:id="@+id/phonebutton"
                 android:layout_width="match_parent"
