--- a/StartupCarvaan/app/src/main/res/layout/activity_create_profile.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_create_profile.xml
@@ -94,7 +94,8 @@
                         android:hint="Display Name"
                         android:textColor="#424242"
                         android:textSize="21sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:maxLength="25"/>
 
                     <EditText
                         android:id="@+id/title"
@@ -102,7 +103,8 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/proximanovaregular"
                         android:hint="Title / Designation/"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:maxLength="15"/>
 
 
                 </LinearLayout>
@@ -161,7 +163,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:hint="enter anything about you that shows your personality" />
+                            android:hint="enter anything about you that shows your personality"
+                            android:maxLength="50"/>
                     </LinearLayout>
 
                 </LinearLayout>
@@ -227,6 +230,7 @@
                                 android:textSize="15sp"
                                 android:textColor="@color/goodgrey"
                                 android:inputType="numberDecimal"
+                                android:maxLength="10"
                                 android:fontFamily="@font/proximanovaregular" />
                         </LinearLayout>
 
@@ -253,7 +257,8 @@
                                 android:hint="enter professing email id"
                                 android:textSize="15sp"
                                 android:inputType="textEmailAddress"
-                                android:fontFamily="@font/proximanovaregular" />
+                                android:fontFamily="@font/proximanovaregular"
+                                android:maxLength="25"/>
                         </LinearLayout>
 
                         <LinearLayout
@@ -279,7 +284,8 @@
                                 android:textSize="15sp"
                                 android:textColor="@color/goodgrey"
                                 android:inputType="textPostalAddress"
-                                android:fontFamily="@font/proximanovaregular" />
+                                android:fontFamily="@font/proximanovaregular"
+                                android:maxLength="30"/>
                         </LinearLayout>
 
                     </LinearLayout>
