--- a/StartupCarvaan/app/src/main/res/layout/z_single_blogfile.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_blogfile.xml
@@ -268,6 +268,7 @@
                                     android:paddingRight="10dp"
                                     android:layout_marginLeft="10dp"
                         android:background="#293859"
+                        android:maxLength="300"
 
                                     />
                                 <LinearLayout
