--- a/StartupCarvaan/app/src/main/res/layout/z_single_practice.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_practice.xml
@@ -147,9 +147,9 @@
                         android:layout_height="35dp"
                         android:hint="100 bonus coin"
                         android:textColor="@color/black"
-                        android:textColorHint="@color/black"
                         android:textSize="15sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:maxLength="8"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
