--- a/StartupCarvaan/app/src/main/res/layout/fragment_myshares.xml
+++ b/StartupCarvaan/app/src/main/res/layout/fragment_myshares.xml
@@ -7,6 +7,13 @@
     tools:context=".fragments.myshares.myshares">
 
     <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="You do not have any share please buy some in all shares section">
+    </TextView>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mysharerecyclerview"
         android:layout_width="match_parent"
