--- a/StartupCarvaan/app/src/main/res/layout/activity_payout.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_payout.xml
@@ -5,26 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
     android:background="@color/blue"
     tools:context=".payments.payout">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="210dp"
 
+        <LinearLayout
+            android:layout_marginTop="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
             android:gravity="center_horizontal|bottom"
             android:orientation="horizontal"
             android:background="@color/blue">
             <EditText
+                android:layout_marginRight="50dp"
+                android:layout_marginLeft="50dp"
                 android:id="@+id/coins"
-                android:layout_width="150dp"
+                android:layout_width="match_parent"
                 android:layout_height="38dp"
-                android:layout_marginRight="11dp"
                 android:ems="10"
                 android:textColorHint="@color/black"
                 android:background="@drawable/inputtype"
@@ -33,10 +34,17 @@
                 android:gravity="center"
                 android:hint="Enter No.of coins"
                 />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:gravity="center_horizontal|bottom"
+            android:orientation="horizontal"
+            android:background="@color/blue">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:gravity="start"
                 android:textStyle="bold"
                 android:textColor="#FFFFFF"
                 android:layout_marginTop="20dp"
@@ -55,7 +63,6 @@
                 android:textSize="20dp" />
 
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
