--- a/StartupCarvaan/app/src/main/res/layout/singlecomment.xml
+++ b/StartupCarvaan/app/src/main/res/layout/singlecomment.xml
@@ -20,7 +20,6 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/vsm_coin">
-
         </de.hdodenhof.circleimageview.CircleImageView>
         <LinearLayout
             android:layout_width="wrap_content"
@@ -54,9 +53,9 @@ android:layout_marginTop="3dp"
             android:id="@+id/comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="80dp"
             android:layout_marginTop="8dp"
-            android:textSize="15dp"
+            android:textSize="18sp"
+            android:padding="10dp"
             android:layout_marginBottom="12dp"
             android:text="ytfdsfyusdcrcrcf"
             android:textColor="@color/black"
