--- a/StartupCarvaan/app/src/main/res/layout/activity_payin.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_payin.xml
@@ -1,131 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="#00b1e1"
-    tools:context=".payments.payin">
+    android:orientation="vertical"
+    android:background="@color/blue"
+    tools:context=".payments.payout">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:orientation="vertical"
-        android:gravity="center"
-        >
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="110dp"
-            >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_alignParentBottom="true"
-                android:background="#E2E2E2"
-                android:gravity="center"
-                >
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="35dp"
-                    android:paddingBottom="0dp"
-                    android:textSize="12sp"
-                    android:text="Order #RZP42"
-                    />
-
-            </LinearLayout>
-
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_centerHorizontal="true"
-                android:background="#FFFFFF"
-                android:src="@drawable/startupcarvaanlogo"
-                />
-
-        </RelativeLayout>
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:paddingTop="15dp"
-            android:background="#f2f2f2"
-            android:gravity="center"
-            >
+            android:layout_height="80dp"
+            android:gravity="center_horizontal|bottom"
+            android:orientation="horizontal"
+            android:background="@color/blue">
+            <EditText
+                android:layout_marginRight="50dp"
+                android:layout_marginLeft="50dp"
+                android:id="@+id/coins"
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
+                android:ems="10"
 
+                android:background="@drawable/inputtype"
+                android:inputType="number"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:hint="min 500 coins maxi 10000 coins"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:gravity="center_horizontal|bottom"
+            android:orientation="horizontal"
+            android:background="@color/blue">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:paddingTop="0dp"
-                android:paddingBottom="5dp"
-                android:textSize="20sp"
-                android:text="Razorpay T-Shirt"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:paddingTop="0dp"
-                android:paddingBottom="0dp"
-                android:textSize="12sp"
-                android:text="INR 1.00"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:paddingTop="10dp"
-                android:paddingBottom="0dp"
-                android:textSize="12sp"
-                android:textStyle="italic"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:textColor="@android:color/holo_red_dark"
-                android:gravity="center_horizontal"
-                android:text="Transaction is for testing purpose and your deducted amount will get refunded in 3-5 business days "
-                />
-
-            <Button
-                android:id="@+id/btn_pay"
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
+                android:gravity="start"
+                android:textStyle="bold"
+                android:textColor="#FFFFFF"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:layout_gravity="center_horizontal"
-                android:paddingRight="20dp"
-                android:paddingLeft="20dp"
-                android:background="@color/yellow"
-                android:textSize="14sp"
-                android:textColor="#fcfcfc"
-                android:text="Purchase"
-                />
+                android:text="You pay"
+                android:textSize="18dp" />
+            <TextView
+                android:id="@+id/convertedMoney"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginLeft="8dp"
+                android:textStyle="bold"
+                android:textColor="#FFFFFF"
+                android:layout_marginTop="20dp"
+                android:text="0"
+                android:textSize="20dp" />
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="6.2"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:background="@color/yellow"
-            android:textSize="12sp"
-            android:textColor="#a1ddee"
-            android:textStyle="italic"
-            android:text="Secure Payments by Razorpay"
-            />
+                <EditText
+                    android:id="@+id/upiname"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="50dp"
+                    android:layout_marginLeft="50dp"
+                    android:ems="10"
+                    android:textSize="15sp"
+                    android:background="@drawable/inputtype"
+                    android:inputType="textPersonName"
+                    android:gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:hint="Enter your Full Name"
+                    />
 
+                <EditText
+                    android:id="@+id/phonenumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="50dp"
+                    android:layout_marginLeft="50dp"
+                    android:ems="10"
+                    android:textSize="15sp"
+                    android:background="@drawable/inputtype"
+                    android:inputType="textPersonName"
+                    android:gravity="center"
+                    android:layout_marginTop="25dp"
+                    android:hint="Enter your phone number"
+                    />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center">
+                    <Button
+                        android:layout_marginTop="20dp"
+                        android:id="@+id/btn_pay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="#2C9FD3"
+                        android:text="Pay Now"
+                        />
+
+                </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
     </LinearLayout>
-
-</RelativeLayout>
+</ScrollView>
